--- a/Stage_1_EDA.ipynb
+++ b/Stage_1_EDA.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -129,13 +129,13 @@
        "4            [-117.862173435, 33.6796854072]  20160813_184932_0c64  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open('/home/delloro/Springboard/Assignments/Capstone_2/planesnet/planesnet.json', mode='r') as file:\n",
+    "with open('./planesnet/planesnet.json', mode='r') as file:\n",
     "    planesdict = json.load(file)\n",
     "df = pd.DataFrame(planesdict)\n",
     "df.head()"
