--- a/Stage_1_EDA.ipynb
+++ b/Stage_1_EDA.ipynb
@@ -29,6 +29,7 @@
     "import geopandas as gpd\n",
     "import collections\n",
     "import random\n",
+    "import os\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
     "%matplotlib inline\n",
@@ -135,6 +136,7 @@
     }
    ],
    "source": [
+    "cwd = os.getcwd()\n",
     "with open('./planesnet/planesnet.json', mode='r') as file:\n",
     "    planesdict = json.load(file)\n",
     "df = pd.DataFrame(planesdict)\n",
@@ -194,7 +196,7 @@
     "#list of Latitudes and Longitudes, import California shapefile\n",
     "lons = [lon for lon, lat in planesdict['locations']]\n",
     "lats = [lat for lon, lat in planesdict['locations']]\n",
-    "cali = gpd.read_file('/home/delloro/Springboard/Assignments/Capstone_2/maps/CA_counties/CA_counties.shp')\n",
+    "cali = gpd.read_file(cwd + '/maps/CA_counties/CA_counties.shp')\n",
     "\n",
     "#plot location of images in California\n",
     "fig, ax = plt.subplots(figsize=(7, 6))\n",
@@ -204,7 +206,7 @@
     "ax.set_ylabel('Latitude')\n",
     "ax.grid(b=True, which='both', axis='both', color='k', linestyle=':')\n",
     "ax.set_title('Location of Images Over California', size=16)\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/Cali_map.png')\n",
+    "plt.savefig(cwd + '/figures/Cali_map.png')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -258,7 +260,7 @@
     "ax.set_xlabel('Label')\n",
     "ax.set_ylabel('Count')\n",
     "ax.set_title('Label Count', size=16)\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/class_schm.png')\n",
+    "plt.savefig(cwd + '/figures/class_schm.png')\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
@@ -309,7 +311,7 @@
     "        \n",
     "    plt.title('Image {:05d}: '.format(value) + label, size=15)\n",
     "    plt.imshow(img)\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/exmp_imgs.png')\n",
+    "plt.savefig(cwd + '/figures/exmp_imgs.png')\n",
     "plt.tight_layout()    \n",
     "plt.show()"
    ]
@@ -357,7 +359,7 @@
     "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.5) #create colorbar axes\n",
     "ax.set_title('RMS Display of Satellite Images', fontsize=16)\n",
     "plt.colorbar(img, cax=cax)\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/RMS.png')\n",
+    "plt.savefig(cwd + '/figures/RMS.png')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -446,7 +448,7 @@
     "        \n",
     "        plt.title('Image {:05d}: '.format(index) + label, size=15)\n",
     "        plt.imshow(temp)\n",
-    "    plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/rgb_img_{}.png'.format(index))\n",
+    "    plt.savefig(cwd + '/figures/rgb_img_{}.png'.format(index))\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
@@ -637,7 +639,7 @@
     "    plt.xlabel('Pixel Intensity')\n",
     "    plt.ylabel('Density')\n",
     "    plt.title('RGB Bands', size=16)\n",
-    "    plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/grayscale{}.png'.format(index))\n",
+    "    plt.savefig(cwd + '/figures/grayscale{}.png'.format(index))\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n"
    ]
@@ -718,7 +720,7 @@
     "ax[1].set_ylim(0, 0.017)\n",
     "ax[1].set_title('Not-Planes RGB Bands', size=16)\n",
     "ax[1].grid(color='k', linestyle=':', linewidth=0.5, alpha=0.7)\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/rgb_dists.png')\n",
+    "plt.savefig(cwd + '/figures/rgb_dists.png')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -832,7 +834,7 @@
     "ax.arrow(0.08, 70, 0.09, 0, color='k', head_width=2, head_length=0.01)\n",
     "ax.text(x=0.08, y=71.5, s=('Obs. Diff. {0:.1f}'.format(obs_diff)), fontsize=12)\n",
     "ax.set_title('Null Hypothesis Simulation', size=16)\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/hyp_test.png')\n",
+    "plt.savefig(cwd + '/figures/hyp_test.png')\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
