--- a/Stage_2_Machine_Learning.ipynb
+++ b/Stage_2_Machine_Learning.ipynb
@@ -28,6 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "import collections\n",
     "import random\n",
+    "import os\n",
     "from sklearn import metrics, feature_selection\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
     "from sklearn.decomposition import PCA\n",
@@ -151,6 +152,7 @@
     }
    ],
    "source": [
+    "cwd = os.getcwd()\n",
     "with open('./planesnet/planesnet.json', mode='r') as file:\n",
     "    planesdict = json.load(file)\n",
     "df = pd.DataFrame(planesdict)\n",
@@ -231,7 +233,7 @@
     "ax.text(x=220, y=.8, s=('{0:.0f}%'.format(prc)), fontsize=12)\n",
     "ax.set_title('Principal Component Analysis (PCA)', size=16)\n",
     "plt.xticks()\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/PCA.png')\n",
+    "plt.savefig(cwd + '/figures/PCA.png')\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
@@ -517,7 +519,7 @@
     "names = []\n",
     "for model in gscv_models:\n",
     "    res = pd.DataFrame(gscv_models[model].cv_results_)\n",
-    "    res.to_json('/home/delloro/Springboard/Assignments/Capstone_2/test_results/{}_GScv_results.json'.format(model))\n",
+    "    res.to_json(cwd + '/test_results/{}_GScv_results.json'.format(model))\n",
     "    res = res.loc[:, ['split0_test_score', 'split1_test_score', 'split2_test_score', 'split3_test_score', 'split4_test_score']].values.ravel()\n",
     "    results.append(res)\n",
     "    names.append(model)\n",
@@ -528,7 +530,7 @@
     "ax.set_ylabel('Accuracy')\n",
     "ax.set_title('GridSearchCV Results', size=16)\n",
     "plt.xticks(range(1, len(names)+1), names, size=15)\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/GridSearchCV_ML.png')\n",
+    "plt.savefig(cwd + '/figures/GridSearchCV_ML.png')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -911,7 +913,7 @@
     "ax[1].legend(['Train', 'Validation'], loc='upper right', prop={'size':15}, facecolor='white')\n",
     "ax[1].set_title('1D CNN Model Loss', size=16)\n",
     "\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/1D_CNN_accloss.png')\n",
+    "plt.savefig(cwd + '/figures/1D_CNN_accloss.png')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -1175,7 +1177,7 @@
     "ax[1].legend(['Train', 'Validation'], loc='upper right', prop={'size':15}, facecolor='white')\n",
     "ax[1].set_title('2D CNN Model Loss', size=16)\n",
     "\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/2D_CNN_accloss.png')\n",
+    "plt.savefig(cwd + '/figures/2D_CNN_accloss.png')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -1229,7 +1231,7 @@
     "ax.set_title('Model Accuracy on Test Data', size=16)\n",
     "ax.grid(b=True, which='both', axis='both', color='k', linestyle=':')\n",
     "plt.xticks(size=15, rotation=45)\n",
-    "plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/model_comp.png')\n",
+    "plt.savefig(cwd + '/figures/model_comp.png')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -1362,7 +1364,7 @@
     "    ax[1].set_title('Precision - Recall Curve: ' + str(model), size=15)\n",
     "    ax[1].legend(labels=(['Test Data']), edgecolor='gray', facecolor='white', loc=8, fontsize=13)\n",
     "    ax[1].text(x=0.31, y=0.10, s=('Test Data AUC: {0:.2f}'.format(PRauc)), fontsize=14, bbox=dict(edgecolor='gray', facecolor='white'))\n",
-    "    plt.savefig('/home/delloro/Springboard/Assignments/Capstone_2/figures/ROC_PC_{}.png'.format(str(model).replace(' ', '_')))\n",
+    "    plt.savefig(cwd + '/figures/ROC_PC_{}.png'.format(str(model).replace(' ', '_')))\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
